<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abriralertdialog"
        android:onClick="abrirAlertDialog"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_progress_dialog"
        android:onClick="abrirProgressDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_datePicker"
        android:onClick="AbrirDatePicker"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrirTimePickerDialog"
        android:onClick="AbrirAlertDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AlertPersonalizado"
        android:onClick="abrirAlertPersonalizado"/>
</LinearLayout>
